# WindWakerDebugMenu

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  Makefile  README.md  RomHack.toml  USAGE.md  linker.lds
code/: Cargo.toml
code/src/: cheat_menu.rs  flag_menu.rs  inventory_menu.rs  lib.rs  main_menu.rs  memory.rs  mutex.rs  popups.rs  quest_menu.rs  spawn_menu.rs  triforce.rs  utils.rs
code/src/warp_menu/: consts.rs  mod.rs  room_selection.rs  stage_selection.rs
src/: Cargo.toml  cheat_menu.rs  controller.rs  flag_menu.rs  inventory_menu.rs  lang_items.rs  lib.rs  main_menu.rs  map.rs  memory.rs  patch.asm  popups.rs  print.rs  quest_menu.rs  settings.rs  spawn_menu.rs  triforce.rs  utils.rs  warp_menu.rs
src/inventory_menu/: amounts.rs  equipment.rs  main.rs  mod.rs  progression.rs  quest.rs
src/src/: cheat_menu.rs  flag_editor.rs  flag_menu.rs  inventory_menu.rs  lib.rs  main_menu.rs  patch.asm  popups.rs  spawn_menu.rs  utils.rs  warp_menu.rs
src/warp_menu/: browse_top.rs  consts.rs  main.rs  room_selection.rs  stage_selection.rs
